Fix 1px gap on mobile at top

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -38,7 +38,7 @@
 
 @media (max-width: 600px) {
     #top-gap {
-        height: 57px;
+        height: 56px;
     }
 }
 
